# ros_nekonote

./: .gitignore  README.md
nekonote_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
nekonote_description/meshes/: README.md
nekonote_description/meshes/collision/base/: BODY.stl  JOINT1.stl  JOINT2.stl  JOINT4.stl  JOINT5.stl
nekonote_description/meshes/collision/end_effector_A/: HAND1.stl  HAND2.stl
nekonote_description/meshes/visual/base/: BODY.stl  JOINT1.stl  JOINT3.stl  JOINT4.stl  JOINT5.stl
nekonote_description/meshes/visual/end_effector_A/: HAND1.stl  HAND2.stl
nekonote_description/urdf/: common_materials.xacro  end_effector.urdf.xacro  nekonote.urdf  nekonote.urdf.xacro
nekonote_description/urdf/base/: base.urdf.xacro
nekonote_description/urdf/end_effector_A/: end_effector_A.xacro
nekonote_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
nekonote_driver/cfg/: PositionJointTrajectoryActionServer.cfg
nekonote_driver/include/nekonote_driver/: nekonote_driver.h  nekonote_driver_for_ROS.h  nekonote_driver_for_ROS_bu.h
nekonote_driver/launch/: nekonote_bringup.launch
nekonote_driver/scripts/: follow_joint_trajectory_action_server.py
nekonote_driver/src/: nekonote_driver.cpp
nekonote_driver/src/follow_joint_trajectory_action/: __init__.py  follow_joint_trajectory_action.py
nekonote_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
nekonote_examples/scripts/: follow_joint_trajectory_client.py
nekonote_examples/src/: direct_teaching_ROS.cpp  direct_teaching_no_ROS.cpp  test_torque_control_ROS.cpp
nekonote_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
nekonote_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  nekonote.srdf  nekonote_controllers.yaml  ompl_planning.yaml
nekonote_moveit_config/launch/: default_warehouse_db.launch  demo_dummy.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  nekonote_moveit_controller_manager.launch.xml  nekonote_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
nekonote_moveit_config/scripts/: dummy_joint_trajectory_controller
nekonote_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
nekonote_msgs/action/: JointTrajectory.action
nekonote_msgs/msg/: JointCommand.msg  Mode.msg  Temperature.msg
ros_nekonote/: CHANGELOG.rst  CMakeLists.txt  package.xml
