<?xml version="1.0"?>
<package>
  <name>nekonote_examples</name>
  <version>0.1.1</version>
  <description>The nekonote_examples package contains example programs for NEKONOTE</description>

  <maintainer email="dev@rt-net.jp">Noriaki Nakagawa</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/nekonote_examples/</url> -->
  <url type="repository">https://github.com/rt-net/ros_nekonote</url>
  <url type="bugtracker">https://github.com/rt-net/ros_nekonote/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nekonote_msgs</build_depend>
  <build_depend>nekonote_driver</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nekonote_msgs</run_depend>
  <run_depend>nekonote_driver</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

</package>
