<?xml version="1.0"?>
<package>
  <name>ros_nekonote</name>
  <version>0.1.2</version>
  <description>The ros_nekonote package provides ROS tools for NEKONOTE from RT Corp.</description>

  <maintainer email="dev@rt-net.jp">Noriaki Nakagawa</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/ros_nekonote/</url> -->
  <url type="repository">https://github.com/rt-net/ros_nekonote</url>
  <url type="bugtracker">https://github.com/rt-net/ros_nekonote/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>nekonote_driver</run_depend>
  <run_depend>nekonote_msgs</run_depend>
  <run_depend>nekonote_examples</run_depend>
  <run_depend>nekonote_description</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
